--- a/package.json
+++ b/package.json
@@ -2,32 +2,31 @@
   "name": "@bbc/pack",
   "version": "1.0.0",
   "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bin": {
     "pack": "bin/pack.js"
   },
   "scripts": {
+    "predebug": "rm -rf dist",
     "debug": "node -r @swc-node/register src/index.ts",
     "lint": "eslint ./src/**/*",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.mjs",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm",
+      "require": "./dist/cjs"
+    }
   },
   "files": [
     "bin",
     "dist"
   ],
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@swc-node/register": "^1.5.4",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.12",
-    "eslint": "^8.29.0",
-    "eslint-config-iplayer-ts": "^4.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "mocha": "^10.1.0",
-    "prettier": "^2.8.1",
-    "typescript": "^4.9.4"
-  },
   "engines": {
     "node": ">=18"
   },
@@ -51,13 +50,27 @@
   "prettier": {
     "singleQuote": true,
     "arrowParens": "always",
-    "trailingComma": "none"
+    "trailingComma": "all"
+  },
+  "pack": {
+    "entryPoint": "src/index.ts"
   },
   "dependencies": {
     "@fastify/deepmerge": "^1.3.0",
     "@rollup/pluginutils": "^5.0.2",
-    "@swc/core": "^1.3.22",
-    "rollup": "^3.7.1",
-    "zod": "^3.19.1"
+    "@swc/core": "^1.3.27",
+    "rollup": "^3.10.1",
+    "zod": "^3.20.2"
+  },
+  "devDependencies": {
+    "@swc-node/register": "^1.5.5",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.18",
+    "eslint": "^8.32.0",
+    "eslint-config-iplayer-ts": "^4.1.0",
+    "eslint-config-prettier": "^8.6.0",
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.4"
   }
 }
