--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "noErrorTruncation": true,
     "target": "es2020",
-    "module": "ESNext",
+    "module": "NodeNext",
     "outDir": "dist",
     "sourceMap": false,
     "moduleResolution": "node",
