--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "@bbc/pack",
+  "name": "@lexedwards/pack",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bin": {
-    "pack": "bin/pack.js"
+    "pack": "bin/pack.mjs"
   },
   "scripts": {
-    "predebug": "rm -rf dist",
-    "debug": "node -r @swc-node/register src/index.ts",
+    "prebuild": "rm -rf dist",
+    "build": "node --experimental-specifier-resolution=node --loader ts-node/esm src/index.ts",
     "lint": "eslint ./src/**/*",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "doctor": "node --experimental-specifier-resolution=node --loader ts-node/esm src/index.ts --doctor"
   },
-  "main": "dist/cjs/index.js",
+  "type": "module",
   "module": "dist/esm/index.mjs",
-  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm",
-      "require": "./dist/cjs"
+      "import": "./dist/esm"
     }
   },
   "files": [
@@ -53,24 +52,28 @@
     "trailingComma": "all"
   },
   "pack": {
-    "entryPoint": "src/index.ts"
+    "inputFile": "src/index.ts",
+    "tsConfig": "tsconfig.json"
   },
   "dependencies": {
     "@fastify/deepmerge": "^1.3.0",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/pluginutils": "^5.0.2",
-    "@swc/core": "^1.3.27",
-    "rollup": "^3.10.1",
-    "zod": "^3.20.2"
+    "@swc/core": "^1.3.46",
+    "rollup": "^3.20.2",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-swc3": "^0.8.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@swc-node/register": "^1.5.5",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.18",
-    "eslint": "^8.32.0",
+    "@types/node": "^18.15.11",
+    "eslint": "^8.38.0",
     "eslint-config-iplayer-ts": "^4.1.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^8.8.0",
     "mocha": "^10.2.0",
-    "prettier": "^2.8.3",
-    "typescript": "^4.9.4"
+    "prettier": "^2.8.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
