--- a/package.json
+++ b/package.json
@@ -31,20 +31,18 @@
   },
   "eslintConfig": {
     "extends": [
-      "iplayer-ts",
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
       "prettier"
     ],
-    "parserOptions": {
-      "sourceType": "module"
-    },
+    "parser": "@typescript-eslint/parser",
     "ignorePatterns": [
       "dist/**"
     ],
-    "rules": {
-      "no-console": "off",
-      "@typescript-eslint/no-unused-vars": "off",
-      "@typescript-eslint/naming-convention": "off"
-    }
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "root": true
   },
   "prettier": {
     "singleQuote": true,
@@ -59,7 +57,7 @@
     "@fastify/deepmerge": "^1.3.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/pluginutils": "^5.0.2",
-    "@swc/core": "^1.3.46",
+    "@swc/core": "^1.3.49",
     "rollup": "^3.20.2",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-swc3": "^0.8.1",
@@ -68,8 +66,9 @@
   "devDependencies": {
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
-    "eslint-config-iplayer-ts": "^4.1.0",
     "eslint-config-prettier": "^8.8.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.7",
